--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -34,18 +34,23 @@
         </ul>
       </div>
   </nav>
-    {% if messages %}
-      {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}">
-          {{ message }}
+    <main role="main" class="container">
+      <div class="row">
+        <div class="col-sm-4">
+
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
         </div>
-      {% endfor %}
-    {% endif %}
-
-    {% block content %}
-    {% endblock %}
-
-
+      </div>
+      <div class="row">
+        {% block content %}{% endblock %}
+      </div>
+    </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
