--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -18,7 +18,7 @@
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already Signed Up? <a class="ml-2" href="#">Login</a>
+            Already Signed Up? <a class="ml-2" href="{% url 'login' %}">Login</a>
         </small>
     </div>
 </div>
