--- a/register/templates/login.html
+++ b/register/templates/login.html
@@ -1,7 +1,29 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-login page
+
+<div class="content-section">
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Login</legend>
+            {{ form|crispy }}
+        </fieldset>
+
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">
+                Login
+            </button>
+        </div>
+    </form>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            Have not signed up yet? <a class="ml-2" href="{% url 'register' %}">Register</a>
+        </small>
+    </div>
+</div>
+
 {% endblock %}
 
-{% block title %} User Login {% endblock %}
+{% block title %} Login {% endblock %}
