--- a/register/templates/logout.html
+++ b/register/templates/logout.html
@@ -1,7 +1,10 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block content %}
-logout page
-{% endblock %}
-
-{% block title %} User Logout {% endblock %}
+    <h3>You have been logged out</h2>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            <a href="{% url 'login' %}">Log In Again</a>
+        </small>
+    </div>
+{% endblock content %}
+{% block title %} Logout {% endblock %}
