--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -34,6 +34,11 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
+             {% if user.is_superuser is True %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'myadmin' %}">MyAdmin</a>
+              </li>
+             {% endif %}
           {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Login</a>
