mysql raw commands

--- a/register/templates/reset_password.html
+++ b/register/templates/reset_password.html
@@ -12,14 +12,13 @@
             <form method="POST" enctype="multipart/form-data">
                   {% csrf_token %}
                   <fieldset class="form-group">
-                      <legend class="border-bottom mb-4">Edit Profile Info</legend>
-                      {{ u_form|crispy }}
+                      <legend class="border-bottom mb-4">Password Reset</legend>
+                      {{ p_form|crispy }}
                   </fieldset>
                   <div class="form-group">
-                      <button class="btn btn-outline-info" type="submit">Update</button>
+                      <button class="btn btn-outline-info" type="submit">Reset!</button>
                   </div>
             </form>
-            <a href="{%url 'password_reset' id=id %}">Reset this user password</a>
         </div>
     </div>
   </div>
